--- a/form.css
+++ b/form.css
@@ -106,9 +106,9 @@ button {
 }
 
 button:hover {
-        cursor: pointer;
-        background-color: #5c8374;
-        font-size : 17px;
+    cursor: pointer;
+    background-color: #5c8374;
+    font-size: 17px;
 }
 
 #localisation {
@@ -192,8 +192,10 @@ input {
     }
 
     .logoTram
+
     /*.logoX,
-    .logoInsta*/ {
+    .logoInsta*/
+        {
         width: 3vw;
     }
 
@@ -205,9 +207,9 @@ input {
 @media screen and (max-width: 920px) {
 
     /*#infoClients {*/
-        /* justify-content: center; */
-        /* align-content: center; */
-   /* }*/
+    /* justify-content: center; */
+    /* align-content: center; */
+    /* }*/
 
 
     #availableClient {
@@ -232,14 +234,13 @@ input {
         width: 50vw;
     }
 
-    .logoTram/*,
-    .logoX,
-    .logoInsta*/ {
-        width: 3vw;
-    }
+    .logoTram
 
-    footer {
-        font-size: 1rem;
+    /*,
+    .logoX,
+    .logoInsta*/
+        {
+        width: 3vw;
     }
 
     #sportCoachPic {
@@ -261,9 +262,12 @@ input {
         justify-content: space-around;
     }
 
-    .logoTram/*
+    .logoTram
+
+    /*
     .logoX,
-    .logoInsta */{
+    .logoInsta */
+        {
         width: 4vw;
     }
 
