ajout css activity

--- a/Activities-style.css
+++ b/Activities-style.css
@@ -210,6 +210,21 @@ a {
     grid-area: i;
 }
 
+#sports_paragraph {
+    font-family: var(--paragraph-font);
+    font-size: var(--paragraph-size);
+}
+
+#sports_title {
+    font-family: var(--main-font);
+    font-size: var(--title2-size);
+}
+
+#sports_price {
+    font-family: var(--paragraph-font);
+    font-size: var(--paragraph-size);
+}
+
 
 @media screen and (max-width: 1600px) {
 
