--- a/homePage.css
+++ b/homePage.css
@@ -130,8 +130,11 @@ button {
     background-color: var(--secondary-color);
     font-family: var(--paragraph-font);
     font-size: 1em;
-    padding: .5rem 1rem;
-    border-radius: 10px;
+    padding: .5em 1em;
+    border-radius: 20px;
+    box-shadow: 4px 4px 12px #122a2b,
+             -4px -4px 12px #122a2b;
+             transition: all 0.3s ease 0s;
 }
 
 .button {
@@ -140,10 +143,11 @@ button {
     margin-right: 2%;
 }
 
-.button :hover{
+.button a :hover{
     cursor: pointer;
     background-color: #5c8374;
     font-size : 20px;
+    border-radius: 20px;
 }
 
 @media screen and (max-width: 768px) {
