--- a/homePage.css
+++ b/homePage.css
@@ -212,7 +212,7 @@ button {
     .flex-container div h3 {
         width: 76vw;
     }
-h1 {
+h1,h2 {
 font-size: 1rem;
 }
 }
@@ -237,7 +237,7 @@ font-size: 1rem;
         transform: translate(-50%, -50%);
         color: var(--paragraph-color);
         font-family: var(--main-font);
-        /* font-size: 1rem; */
+
     }
 
     body {
