--- a/homePage.css
+++ b/homePage.css
@@ -212,8 +212,11 @@ button {
     .flex-container div h3 {
         width: 76vw;
     }
-h1,h2 {
-font-size: 1rem;
+h1 {
+font-size: 1.5rem;
+}
+h2{
+   font-size: 1rem; 
 }
 }
 
